// TODO document or fix changing radar settings and impact on main screen radars
// TODO UtilityMetar in radar has optimization related to text file loading
// TODO bug dark blue theme does not work with checkbox
// TODO update Hourly activity to move location to subtitle
// TODO BUG - storm reports show radar doesn't show location dot for report


55117 2019_03_XX 
55116 2019_02_24 update OPC URL
                [BUG] test changing dark blue theme colors to impact checkbox border (buttonTint)
55115 2019_02_13 GOES17 and disable Image tab
55114 2019_02_11 code cleanup
                 tag release to fdroid
55113 2019_02_10 update to studio 3.3.1 including gradle update and kotlin plugin update
                [BUG] settings->colors didn't have black bg
		sunrise/sunset card - text to black and tap scrolls to top
55112 2019_02_06 [BUG] Level2 radar and CPC was no longer working after NWS turned off HTTP
                proactively change Level3 radar to https
                [BUG] index for AVC was off in WPC Img
55111 2019_02_06 turn GlobalArrays into object class
55110 2019_02_06 additions to UtilityMetarConditions
                 [BUG] misc tab was not reflecting awc mosaic setting
                 camelCase vars in GlobalArrays to match wXL23
                 convert OPC access to HTTPS
55109 2019_02_02 code cleanup
                 convert external code to \n
                 add product types to AWC Radar
55108 2019_02_02 add AWC radar option and add RAD_2KM to homescreen options
55107 2019_01_30 make better use of ObjectTextView
                 for 7day card, use text autosize so top line shrinks
                 [BUG] if search in spotters activity there is no way save app restart or refresh to get back to full spotter list
55106 2019_01_28 enhance us warning cards in misc uswarn
                 add ObjectTextView
                 add ObjectCardStormReportItem
55105 2019_01_27 update NDR to r19 and kotlin plugin to 1.3.20